--- a/templates/PROJECTFramework/Podfile
+++ b/templates/PROJECTFramework/Podfile
@@ -1,5 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
-source 'git@gitlab.com:cnstar/ZCMRepos.git'
+#source 'git@gitlab.com:cnstar/ZCMRepos.git'
 
 platform :ios, '8.0'
 inhibit_all_warnings!
